# decafe-timer

./: .gitignore  AGENTS.md  README-ja_JP.md  README.md  package-lock.json  package.json  pyproject.toml
.codex/logs/: 2025-12-02_17-56-54.raw  2025-12-02_18-28-23.raw  2025-12-02_18-29-29.raw  2025-12-02_18-40-19.raw  2025-12-02_18-53-11.raw  2025-12-02_21-29-11.raw  2025-12-02_22-43-44.raw  2025-12-04_21-11-02.raw  2025-12-06_18-00-15.raw  2025-12-08_17-07-33.raw  2025-12-15_00-30-43.raw  2025-12-20_01-20-03.raw  2025-12-20_01-20-45.raw  2026-01-09_15-51-46.raw  2026-01-12_13-18-50.raw  2026-01-12_14-24-48.raw  2026-01-12_23-38-42.raw  2026-01-13_00-39-11.raw  2026-01-14_22-02-29.raw
aichat/: 20251202.md
docs/: design.md  python-compat-uv.md
src/decafe_timer/: __about__.py  __init__.py  cli.py  duration.py  main.py  render.py
tests/: test_cli.py  test_render.py
