[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decafe-timer"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "appdirs",
]

[project.urls]
Documentation = "https://github.com/Toshihiro Kamiya/decafe-timer#readme"
Issues = "https://github.com/Toshihiro Kamiya/decafe-timer/issues"
Source = "https://github.com/Toshihiro Kamiya/decafe-timer"

[tool.hatch.version]
path = "src/decafe_timer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/decafe_timer tests}"

[tool.coverage.run]
source_pkgs = ["decafe_timer", "tests"]
branch = true
parallel = true
omit = [
  "src/decafe_timer/__about__.py",
]

[tool.coverage.paths]
decafe_timer = ["src/decafe_timer", "*/decafe-timer/src/decafe_timer"]
tests = ["tests", "*/decafe-timer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
decafe-timer = "decafe_timer:main"
