[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decafe-timer"
dynamic = ["version"]
description = "CLI coffee cooldown timer with a shrinking ASCII bar."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["coffee", "timer", "cli", "productivity"]
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "appdirs",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Issues = "https://github.com/tos-kamiya/decafe-timer/issues"
Source = "https://github.com/tos-kamiya/decafe-timer"

[tool.hatch.version]
path = "src/decafe_timer/__about__.py"

[tool.coverage.run]
source_pkgs = ["decafe_timer", "tests"]
branch = true
parallel = true
omit = [
  "src/decafe_timer/__about__.py",
]

[tool.coverage.paths]
decafe_timer = ["src/decafe_timer", "*/decafe-timer/src/decafe_timer"]
tests = ["tests", "*/decafe-timer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
decafe-timer = "decafe_timer:main"
